<resources>
    <string name="app_name">曼德麦普</string>
    <string name="app_desc">Share your mind anywhere.</string>
    <string name="app_version">Version 1.0</string>
    <string name="please_wait">请稍等…</string>

    <string name="login_user">用户名</string>
    <string name="login_pw">密码</string>
    <string name="login_title">登&#160;&#160;录</string>
    <string name="login_register_tip">注册体验高效的思维导图</string>
    <string name="login_loading">正在登录…</string>

    <string name="register_username">用户名（不可更改）</string>
    <string name="register_pw">确认密码</string>
    <string name="register_nickname">昵称</string>
    <string name="register_title">注&#160;&#160;册</string>
    <string name="register_boy">男</string>
    <string name="register_girl">女</string>
    <string name="register_set_birth">点击设置生日</string>
    <string name="register_loading">正在注册…</string>
    <string name="register_success">注册成功</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

	<string name="user_map_manage_title">我的导图</string>
	<string name="team_manage_title">我的团队</string>

	<string name="content_loading">加载中…</string>

    <string name="map_json">
		{
			"title": "计算机科学",
			"is_locked": 0,
			"locked_by": -1,
			"history": "同步历史",
			"data": [
				{
					"title": "基础知识",
					"is_locked": 0,
					"locked_by": -1,
					"history": "同步历史",
					"data": [
						{
							"title": "高等数学",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史",
							"data":[
								{
									"title": "第一章",
									"is_locked": 0,
									"locked_by": -1,
									"history": "同步历史"
								}
							]
						},
						{
							"title": "大学物理",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						}
					]
				},
				{
					"title": "进阶知识",
					"is_locked": 0,
					"locked_by": -1,
					"history": "同步历史",
					"data": [
						{
							"title": "线性代数",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						},
						{
							"title": "离散数学",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						}
					]
				},
				{
					"title": "专业基础",
					"is_locked": 0,
					"locked_by": -1,
					"history": "同步历史",
					"data": [
						{
							"title": "数据结构",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						},
						{
							"title": "编译原理",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						}
					]
				},
				{
					"title": "研究方向",
					"is_locked": 0,
					"locked_by": -1,
					"history": "同步历史",
					"data": [
						{
							"title": "人工智能",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						},
						{
							"title": "数据挖掘",
							"is_locked": 0,
							"locked_by": -1,
							"history": "同步历史"
						}
					]
				}
			]
		}
    </string>
</resources>
