<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBG"
    tools:context=".uis.main.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/welcome_logo_img"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/global_logo_white" />

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_desc"
            android:layout_marginBottom="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_marginBottom="4dp"
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/welcome_version_tv" />

</RelativeLayout>
